<resources>
    <string name="app_name">GymStats</string>
    <string name="account">Account</string>
    <string name="history">History</string>
    <string name="workouts">Workouts</string>
    <string name="exercises">Exercises</string>
    <string name="stats">Stats</string>
    <string name="title_activity_exercise_filters">ExerciseFiltersActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>